{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 9,
  "lineage": "138b96d6-7f7f-2488-8c59-722f902d37a1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d63de463e6604d0a",
            "arn": "arn:aws:ec2:ap-south-1:767398061233:instance/i-092cca4ca7d5b1df6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-092cca4ca7d5b1df6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp_latest",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00f8059ac3b782387",
            "private_dns": "ip-172-31-34-230.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.34.230",
            "public_dns": "ec2-13-201-13-96.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.13.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09790af04e404d420",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07cf31c43a84e8a41",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09cc1ad73672274a5"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dpw-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767398061233:internet-gateway/igw-0dbda7b4183269a07",
            "id": "igw-0dbda7b4183269a07",
            "owner_id": "767398061233",
            "tags": {
              "Name": "dpw-igw"
            },
            "tags_all": {
              "Name": "dpw-igw"
            },
            "vpc_id": "vpc-0c69aa8d0cb9ef4d5"
          },
          "dependencies": [
            "aws_vpc.dpw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dpw-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767398061233:route-table/rtb-0138d05064ca9d36c",
            "id": "rtb-0138d05064ca9d36c",
            "owner_id": "767398061233",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dbda7b4183269a07",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dpw-public-rt"
            },
            "tags_all": {
              "Name": "dpw-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c69aa8d0cb9ef4d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dpw-igw",
            "aws_vpc.dpw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767398061233:security-group/sg-07d3fd0f5a48bfd79",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d3fd0f5a48bfd79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "project_sg",
            "name_prefix": "",
            "owner_id": "767398061233",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project_sg"
            },
            "tags_all": {
              "Name": "project_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0791d27df89a892b1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dpw-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767398061233:vpc/vpc-0c69aa8d0cb9ef4d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08989bd92bed94f0d",
            "default_route_table_id": "rtb-0767f7e4a064335c5",
            "default_security_group_id": "sg-0da9cd2838aa48062",
            "dhcp_options_id": "dopt-06f8310699a043f5c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c69aa8d0cb9ef4d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0767f7e4a064335c5",
            "owner_id": "767398061233",
            "tags": {
              "Name": "dpw-vpc"
            },
            "tags_all": {
              "Name": "dpw-vpc"
            }
          }
        }
      ]
    }
  ]
}